# wgpu_animation

./: .cursorignore  Cargo.toml
refs/: refs.shader
src/: lib.rs  main.rs
src/animation/: mod.rs  physics.rs
src/dep/: mod.rs
src/dep/basic/: action.rs  instance.rs  mod.rs  projection.rs  renderer.rs  shapes.rs  state.rs  structure.rs  texture.rs
src/dep/entity/: entity.rs
src/dep/init/: mod.rs
src/dep/looper/: looper.rs
src/dep/present/: mod.rs  resources.rs  shapes.rs  state.rs  structure.rs
src/example/runner/: main.rs
src/res/: fourg_shader.wgsl  shader.wgsl
src/shapes/: circle.rs  mod.rs
