[package]
name = "embed_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "=22.0"
pollster = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
tokio = {version="1", features=["full"]}
#game-loop = { version = "1.2.0", features=["winit"] }

nalgebra = "=0.33.0"
glam = { version = "=0.29.0", features = ["bytemuck"] }
lyon = {version="=1.0.1"}
