[package]
name = "embed_wgpu_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "embed_wgpu_lib"
path = "src/lib.rs"

[[bin]]
name = "embed_wgpu"
path = "src/example/runner/main.rs"

[[bin]]
name = "wgpu_physics"
path = "src/example/physics/main.rs"

[dependencies]
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "=22.0"
pollster = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
tokio = {version="1", features=["full"]}
game-loop = { version = "1.2.0", features=["winit"] }

glam = { version = "=0.29.0", features = ["bytemuck"] }
lyon = {version="=1.0.1"}
rand = "0.8.5"

rapier2d = { version = "*", features = [ "simd-stable" ] }
nalgebra = "*"
